--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,7 @@
 
   /* Background */
 
-  --radial-gradient: linear-gradient(
-    to right,
-    hsl(214, 47%, 23%),
-    hsl(237, 49%, 15%)
-  );
+  --radial-gradient: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
 
 html {
@@ -77,7 +73,6 @@ body {
 .c-score {
   background: #eee;
   border-radius: 2px;
-
   padding: 1rem 3rem;
 }
 .c-score__title {
@@ -174,13 +169,12 @@ body {
 .choice-title {
   text-transform: uppercase;
   font-size: 1.4rem;
-  /* text-align: center; */
+
   margin-bottom: 10rem;
 }
 .g-choice {
   height: 20rem;
   width: 20rem;
-
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.04);
   background: hsla(238, 48%, 15%, 0.253);
@@ -250,4 +244,35 @@ body {
 /* ***************** */
 .hide {
   display: none;
+}
+
+@media (max-width: 50rem) {
+  .c-score {
+    padding: 1rem 2rem;
+  }
+
+  .img-holder {
+    height: 15rem;
+    width: 15rem;
+  }
+  .game-display {
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+  }
+  .choice-title {
+    font-size: 1.6rem;
+
+    margin-bottom: 2rem;
+  }
+  .g-choice {
+    height: 15rem;
+    width: 15rem;
+  }
+  .game-display__result {
+    grid-row: 2;
+    grid-column: 1/-1;
+  }
+  .game-display__outcome {
+    font-size: 3rem;
+  }
 }
