--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,12 @@ body {
     left: 50%;
     transform: translate(-30%, 30%);
   }
-
+  .img-holder-active {
+    transform: translateY(5%);
+  }
+  /* .img-holder-active-user {
+    transform: translateX(20%);
+  } */
   .game-display {
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
