--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -51,12 +53,14 @@ html {
 }
 
 body {
+  font-family: "Barlow Semi Condensed", serif;
+  font-weight: 400;
   font-size: 1.6rem;
   background-image: var(--radial-gradient);
   color: #fff;
   padding: 2rem;
   overflow-x: hidden;
-  max-width: 110rem;
+  max-width: 140rem;
   margin: 0 auto;
 }
 
@@ -67,7 +71,7 @@ body {
   font-size: 2.2rem;
   max-width: 70rem;
   margin: 2rem auto;
-  padding: 0.8rem;
+  padding: 1.3rem;
   border: 0.2px solid var(--header-outline);
   border-radius: 5px;
 }
@@ -92,6 +96,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 70vh;
+  max-width: 80%;
+  margin: 0 auto;
 }
 .triangle-svg-holder {
   position: relative;
@@ -104,12 +110,14 @@ body {
   justify-content: center;
   align-items: center;
   position: absolute;
+  transition: all 0.4s ease;
+  background-color: #eee;
 }
 
 .img-holder img {
-  width: 75%;
-  height: 75%;
-  background: #eee;
+  width: 55%;
+  height: 55%;
+  /* background: #eee; */
   border-radius: 50%;
   padding: 1.3rem;
 }
@@ -118,19 +126,26 @@ body {
   top: 0;
   left: 0;
   transform: translate(-50%, -50%);
-  background-image: var(--paper-gradient);
+  box-shadow: inset 1px 13px hsl(0, 20%, 88%, 0.7),
+    0px 8px 0px 25px hsl(230, 89%, 60%);
+  outline: 26px solid hsl(230, 89%, 65%);
 }
 .img-holder__scissors {
   top: 0;
   right: 0;
   transform: translate(50%, -50%);
-  background-image: var(--scissors-gradient);
+  box-shadow: inset 1px 13px hsl(0, 20%, 88%, 0.7),
+    0px 8px 0px 25px hsl(39, 89%, 37%);
+  outline: 26px solid hsl(40, 84%, 53%);
 }
+
 .img-holder__rock {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
-  background-image: var(--rock-gradient);
+  box-shadow: inset 1px 13px hsl(0, 20%, 88%, 0.7),
+    0px 8px 0px 25px hsl(349, 71%, 52%);
+  outline: 26px solid hsl(349, 70%, 56%);
 }
 .img-holder-active {
   position: unset;
@@ -138,6 +153,7 @@ body {
   left: unset;
   right: unset;
   transform: unset;
+  transition: all 0.3s ease;
 }
 
 .footer {
@@ -165,23 +181,28 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15rem;
-  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  padding: 0 3rem;
 }
 .choice-title {
   text-transform: uppercase;
-  font-size: 1.4rem;
+  text-align: center;
+  font-size: 1.8rem;
+  letter-spacing: 1.8px;
 
   margin-bottom: 10rem;
 }
 .g-choice {
   height: 20rem;
   width: 20rem;
+  justify-content: center;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.04);
   background: hsla(238, 48%, 15%, 0.253);
 }
 .game-display__result {
-  align-self: center;
+  align-self: flex-end;
 }
 .game-display__outcome {
   text-transform: uppercase;
@@ -194,16 +215,39 @@ body {
   cursor: pointer;
   font-size: 1.6rem;
   letter-spacing: 4px;
+  font-weight: 600;
   text-transform: uppercase;
   background: #eee;
   border-radius: 0.5rem;
   padding: 1.3rem 3rem;
   width: 100%;
-  transform: all 0.4s ease-in-out;
+  transform: all 0.4s ease;
 }
 .game-display__again:hover {
   color: red;
 }
+
+.winner-effect {
+  /* justify-content: center; */
+  width: 30rem;
+  height: 30rem;
+  margin-bottom: 49rem;
+  border-radius: 50%;
+  background: repeating-radial-gradient(
+    circle at center,
+    hsl(233, 44%, 12%, 0.5) 10px,
+    hsl(229, 25%, 31%, 0.0001) 2%,
+    hsl(214, 43%, 22%, 0.9) 20%
+  );
+  background-position: center;
+}
+
+.choice-container {
+  position: absolute;
+  top: 18%;
+  left: 36%;
+}
+
 /* ************ */
 /* RULES OF THE GAMES */
 /* ***************** */
