--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,8 @@ body {
   position: relative;
 }
 .img-holder {
-  height: 20rem;
-  width: 20rem;
+  height: 10rem;
+  width: 10rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -115,8 +115,8 @@ body {
 }
 
 .img-holder img {
-  width: 55%;
-  height: 55%;
+  width: 65%;
+  height: 65%;
   border-radius: 50%;
   padding: 1.3rem;
 }
@@ -193,8 +193,8 @@ body {
   margin-bottom: 10rem;
 }
 .g-choice {
-  height: 20rem;
-  width: 20rem;
+  height: 10rem;
+  width: 10rem;
   justify-content: center;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.04);
@@ -291,6 +291,9 @@ body {
 }
 
 @media (max-width: 50rem) {
+  .main {
+    max-width: 100%;
+  }
   .c-score {
     padding: 1rem 2rem;
   }
@@ -298,27 +301,27 @@ body {
     width: 80%;
   }
   .img-holder {
-    height: 13rem;
-    width: 13rem;
+    height: 8rem;
+    width: 8rem;
   }
 
   .img-holder__paper {
     top: 0;
     left: 0;
-    transform: translate(-28%, -40%);
+    transform: translate(-12%, -30%);
     box-shadow: inset 1px 8px hsl(0, 20%, 88%, 0.7),
       0px 8px 0px 10px hsl(230, 89%, 60%);
     outline: 17px solid hsl(230, 89%, 65%);
   }
   .img-holder__scissors {
-    transform: translate(65%, -45%);
+    transform: translate(75%, -30%);
     box-shadow: inset 1px 8px hsl(0, 20%, 88%, 0.7),
       0px 8px 0px 10px hsl(39, 89%, 37%);
     outline: 17px solid hsl(40, 84%, 53%);
   }
   .img-holder__rock {
     left: 50%;
-    transform: translate(-30%, 30%);
+    transform: translate(-10%, 5%);
 
     box-shadow: inset 1px 8px hsl(0, 20%, 88%, 0.7),
       0px 8px 0px 10px hsl(349, 71%, 52%);
@@ -342,8 +345,8 @@ body {
   }
 
   .g-choice {
-    height: 13rem;
-    width: 13rem;
+    height: 9rem;
+    width: 9rem;
     margin-top: 6rem;
   }
   .game-display__result {
